Fixes in footer one and two, now only one footer and two div inside, change height and width in image team, and fixes in white spaces

--- a/css/main.css
+++ b/css/main.css
@@ -92,7 +92,7 @@ section#about p {
 	color: #212121;
 }
 section.our-team {
-    padding: 45px 0;
+    padding: 0 0 60px 0;
 	background-color: #f6f7f7;
 }
 section.our-team .team {
@@ -114,8 +114,8 @@ section.our-team .team {
 	width: 100%;
 }
 .member img {
-	height: 215px;
-    width: 190px;
+	height: 200px;
+    width: 200px;
     margin-bottom: 10px;
     display: block;
     margin: 1em auto;
@@ -137,7 +137,6 @@ section.our-team .team {
 
 section.companies {
 	padding: 30px 2%;
-	margin-bottom: 3em;
 }
 section.companies .insurances {
 	overflow: auto;
@@ -295,35 +294,37 @@ a.btn:hover {
 }
 
 /*footer one*/
-footer.footer-one {
+
+footer div.footer-one {
     padding: 35px 15%;
     text-align: center;
-    background-color: #f6f7f7;
+    background-color: #fff;
 }
-footer.footer-one h2 {
+footer div.footer-one h2 {
     font-size: 14pt;
     line-height: 14pt;
     font-weight: 600;
     margin: 0.5em 0;
 }
-footer.footer-one p {
+footer div.footer-one p {
     font-size: 13pt;
-    line-height: 13pt;
+    line-height: 17pt;
     letter-spacing: 0.2px;
 }
 /*footer two*/
-footer.footer-two {
+footer div.footer-two {
     padding: 45px 11%;
+    overflow: auto;
+    background-color: #f6f7f7;
 }
-div#map {
+footer div#map {
 	height: 400px;
 	width: 500px;
 	background-color: #ccc;
     float: left;
 }
-footer.footer-two img {
+footer div.footer-two img {
     float: right;
-    width: 550px;
     height: 400px;
 }
 
